# Vishwakarma-Express

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  Vishwakarma Express.md
docs/: DEVELOPER_GUIDE.md  USER_GUIDE.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/browser/: downloads.rs  engine.rs  mod.rs  navigation.rs  tabs.rs
ui/: index.html  package.json
ui/scripts/: main.js
ui/scripts/api/: browser.js
ui/scripts/components/: AIAssistant.js  AIBrowserAssistant.js  BookmarksManager.js  CodeGenerationTools.js  CommandPalette.js  ContextMenuSystem.js  DeveloperTools.js  DownloadManager.js  GamingMedia.js  HistoryManager.js  KeyboardManager.js  KeyboardShortcuts.js  MemoryOptimizer.js  ModalSystem.js  MultiModelAI.js  NextGenDevTools.js  NotificationSystem.js  PerformanceManager.js  PerformanceOptimizer.js  PerformanceTuner.js  ProgressIndicators.js  QuantumPerformance.js  Rendering3D.js  ScriptingEngine.js  SecurityManager.js  SettingsManager.js  SidebarNavigation.js  StartupOptimizer.js  TabManager.js  TerminalFileManager.js  TestingSuite.js  UIAnimations.js  UICustomization.js  UIEnhancer.js  UniversalExtensions.js
ui/styles/: components.css  main.css
