[package]
name = "vishwakarma-express"
version = "0.1.0"
description = "Vishwakarma Express - Next-generation web browser built on Servo"
authors = ["Vishwakarma Industries"]
license = "MIT"
repository = "https://github.com/vishwakarma-industries/vishwakarma-express"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vishwakarma_express_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"

# Servo dependencies (will be added once servo clone completes)
# servo = { path = "../servo" }
# webrender = "0.62"
# webrender_api = "0.62"
# euclid = "0.22"
# gleam = "0.15"
# surfman = "0.9"

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21"
